--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -2,9 +2,7 @@
 name = "{{cookiecutter.project_slug}}"
 version = "0.1.0"
 description = "{{cookiecutter.description}}"
-authors = [
-    {"name": "{{cookiecutter.author_name}}", "email": "{{cookiecutter.author_email}}"}
-]
+authors = [{ name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
